--- a/css/styletag.html
+++ b/css/styletag.html
@@ -1,7 +1,48 @@
 <html>
     <head>
         <title>First Css</title>
-        <link href="first.css" rel="stylesheet"/>
+        <style>
+            header{
+                text-align:center;
+                color:rgb(242, 242, 202);
+                height:60px;
+                background-color:#008064;
+                width:100%
+            }
+            h2{
+                color:white
+            }
+            .card{
+                height:400px;
+                background-color:#69a6c9;
+                width:22%;
+                float:left;
+                margin-left:2%;
+                overflow: scroll;
+            }
+            .brown{
+                background-color:#a08d77
+            }
+            #mheading{
+                color:rgb(21, 9, 149)
+            }
+            #badge{
+                background-color:#c0876d
+            }
+            footer{
+                /* clear: both; */
+                font-size:25px;
+                text-align: center;
+            }
+            #main{
+                display: inline-block;
+            }
+            .card > img {
+                height:200px;
+                width:100%;
+            }
+
+        </style>
     </head>
     <body>
         <header> 
