--- a/css/homepage/home.html
+++ b/css/homepage/home.html
@@ -29,7 +29,7 @@
         <div id="quickSearch">
 
         </div>
-        <!--Footer Section-->
+        <!--Footer Sectin-->
         <footer>
 
         </footer>
