--- a/css/homepage/home.html
+++ b/css/homepage/home.html
@@ -23,11 +23,39 @@
         </header>
         <!--Search Section-->
         <div id="search">
-
+            <div id="content">
+                <div id="logo">
+                    <span>D!</span>
+                </div>
+                <div id="heading">
+                    Find The Best Restaurants Near You
+                </div>
+                <div class="dropdown">
+                    <select>
+                        <option>----SELECT YOUR CITY----</option>
+                        <option>Delhi</option>
+                        <option>Mumbai</option>
+                    </select>
+                    <select class="restSelect">
+                        <option>----SELECT YOUR RESTAURANTS----</option>
+                        <option>AMA Cafe</option>
+                        <option>Wow Momos</option>
+                    </select>
+                </div>
+            </div>
         </div>
         <!--Quick Search Section-->
         <div id="quickSearch">
-
+            <span id="quickHeading">Quick Search</span>
+            <span id="quickSubHeading">Discover Restaurants By Meal</span>
+            <div id="main">
+                <div class="tileContainer"></div>
+                <div class="tileContainer"></div>
+                <div class="tileContainer"></div>
+                <div class="tileContainer"></div>
+                <div class="tileContainer"></div>
+                <div class="tileContainer"></div>
+            </div>
         </div>
         <!--Footer Sectin-->
         <footer>
