--- a/css/homepage/home.html
+++ b/css/homepage/home.html
@@ -23,43 +23,129 @@
         </header>
         <!--Search Section-->
         <div id="search">
-            <div id="content">
-                <div id="logo">
-                    <span>D!</span>
-                </div>
-                <div id="heading">
-                    Find The Best Restaurants Near You
-                </div>
-                <div class="dropdown">
-                    <select>
-                        <option>----SELECT YOUR CITY----</option>
-                        <option>Delhi</option>
-                        <option>Mumbai</option>
-                    </select>
-                    <select class="restSelect">
-                        <option>----SELECT YOUR RESTAURANTS----</option>
-                        <option>AMA Cafe</option>
-                        <option>Wow Momos</option>
-                    </select>
-                </div>
+            <div id="logo">
+                <span>D!</span>
             </div>
+            <div id="heading">
+                Find The Best Restaurants Near You
+            </div>
+            <div class="dropdown">
+                <select>
+                    <option>----SELECT YOUR CITY----</option>
+                    <option>Delhi</option>
+                    <option>Mumbai</option>
+                </select>
+                <select class="restSelect">
+                    <option>----SELECT YOUR RESTAURANTS----</option>
+                    <option>AMA Cafe</option>
+                    <option>Wow Momos</option>
+                </select>
+            </div>
+            <!-- <div id="content">
+                
+            </div> -->
         </div>
         <!--Quick Search Section-->
         <div id="quickSearch">
             <span id="quickHeading">Quick Search</span>
             <span id="quickSubHeading">Discover Restaurants By Meal</span>
             <div id="main">
-                <div class="tileContainer"></div>
-                <div class="tileContainer"></div>
-                <div class="tileContainer"></div>
-                <div class="tileContainer"></div>
-                <div class="tileContainer"></div>
-                <div class="tileContainer"></div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="image/lunch.png" alt="image"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            <a href="../listing/listingPage.html">BreakFast</a>
+                        </div>
+                        <div class="componentSubHeading">
+                            Best Food Near You
+                        </div>
+                    </div>
+                </div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="image/nightlife.png" alt="image"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            <a href="../listing/listingPage.html">Nightlife</a>
+                        </div>
+                        <div class="componentSubHeading">
+                            Best Food Near You
+                        </div>
+                    </div>
+                </div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="image/dinner.png" alt="image"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            <a href="../listing/listingPage.html">Dinner</a>
+                        </div>
+                        <div class="componentSubHeading">
+                            Best Food Near You
+                        </div>
+                    </div>
+                </div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="image/nightlife.png" alt="image"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            <a href="../listing/listingPage.html">Nightlife</a>
+                        </div>
+                        <div class="componentSubHeading">
+                            Best Food Near You
+                        </div>
+                    </div>
+                </div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="image/drinks.png" alt="image"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            <a href="../listing/listingPage.html">Drinks</a>
+                        </div>
+                        <div class="componentSubHeading">
+                            Best Food Near You
+                        </div>
+                    </div>
+                </div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="image/sacks.png" alt="image"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            <a href="../listing/listingPage.html">Snacks</a>
+                        </div>
+                        <div class="componentSubHeading">
+                            Best Food Near You
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Footer Sectin-->
         <footer>
-
+            <p id="footText">&copy; Developer Funnel</p>
+            <hr/>
+            <div class="footDiv">
+                <p>Contact Us</p>
+                <p>About Us</p>
+            </div>
+            <div class="footDiv">
+                <p>Contact Us</p>
+                <p>About Us</p>
+            </div>
+            <div class="footDiv noborder">
+                <p>Contact Us</p>
+                <p>About Us</p>
+            </div>
         </footer>
     </body>
 </html>
