--- a/css/details/details.html
+++ b/css/details/details.html
@@ -2,6 +2,7 @@
     <head>
         <title>Home Page</title>
         <link href="details.css" rel="stylesheet"/>
+        <script src="https://kit.fontawesome.com/c4338603d0.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!--Header Section-->
@@ -23,7 +24,39 @@
         </header>
         <!--Search Section-->
         <div id="content">
-           <h1>Details</h1>
+           <div id="imgDiv">
+               <img src="snacks.png" alt="snacks"/>
+           </div>
+           <div id="contentDiv">
+               <h1>Samosa Chatni Snacks (2Pcs)</h1>
+               <i class="fa-regular fa-star checked"></i>
+               <i class="fa-regular fa-star checked"></i>
+               <i class="fa-regular fa-star checked"></i>
+               <i class="fa-regular fa-star checked"></i>
+               <i class="fa-regular fa-star-half checked"></i>
+               <span>231 Customers Rating</span>
+               <h3><del>Old Price: <i class="fa-solid fa-indian-rupee-sign"></i> 290</del></h3>
+               <h3>New Price: <i class="fa-solid fa-indian-rupee-sign"></i> 230</h3>
+               <h3>Best Taste of Fresh Chai with Samosa At your Door or DineIn</h3>
+               <div class="feature_container">
+                    <figure>
+                        <img src="https://i.ibb.co/2FbpqtH/sentizied.jpg" alt="Trulli" style="width:100%">
+                        <figcaption>Fully Sentizied</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="https://i.ibb.co/s56LLF9/homedelivery.png" alt="Trulli" style="width:100%">
+                        <figcaption>Free Delivery</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="https://i.ibb.co/wJvrhYg/veg.png" alt="Trulli" style="width:100%">
+                        <figcaption>Pure Veg</figcaption>
+                    </figure>
+                </div>
+                <h2>Available</h2>
+                <button class="btn-details">Add To Cart</button>
+                <button class="btn-details">Checkout</button>
+           </div>
+           
         </div>
         <!--Quick Search Section-->
         
