--- a/bootstrap/first.html
+++ b/bootstrap/first.html
@@ -6,17 +6,101 @@
         <link rel="stylesheet" href="first.css"/>
     </head>
     <body>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#devNav">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Developer Funnel</a>
+                </div>
+
+                <div id="devNav" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-log-in"></span> LogIn
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-user"></span> SignUp
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                
+            </div>
+        </nav>
         <div class="container">
             <div class="jumbotron">
                 <h1>Developer Funnel</h1>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
                 </p>
-                <button class="btn btn-success mybutton">Click Me</button>
+                <button class="btn btn-success mybutton" data-toggle="modal" data-target="#devModal">Click Me</button>
                 <button class="btn btn-info">Click Me</button>
                 <button class="btn btn-warning">Click Me</button>
                 <button class="btn btn-primary">Click Me</button>
                 <button class="btn btn-danger">Click Me</button>
+            </div>
+            <!---Modal---->
+            <div id="devModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Modal Header</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
+                            </p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">
+                                Close
+                            </button>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+            <!-------->
+            <div id="devCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#devCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#devCarousel" data-slide-to="1"></li>
+                    <li data-target="#devCarousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="food-tile.png" alt="food"/>
+                        <div class="carousel-caption">
+                            <h3>Food</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="food-wallpaper.png" alt="food"/>
+                    </div>
+                    <div class="item">
+                        <img src="nightlife.png" alt="food"/>
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#devCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#devCarousel" data-slide="Next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
             </div>
             <hr/>
                 <span class="glyphicon glyphicon-trash trash"></span>
@@ -113,3 +197,28 @@
         </div>
     </body>
 </html>
+
+<!-- <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Developer Funnel</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="#">
+                    <span class="glyphicon glyphicon-log-in"></span> LogIn
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="glyphicon glyphicon-user"></span> SignUp
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav> -->
