--- a/bootstrap/first.html
+++ b/bootstrap/first.html
@@ -73,6 +73,15 @@
                     </div>  
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6" id="first"></div>
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6" id="second"></div>
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6" id="third"></div>
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6" id="fourth"></div>
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6" id="fifth"></div>
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6" id="sixth"></div>
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6" id="seventh"></div>
+            </div>
             <!-------->
             <div id="devCarousel" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
