--- a/bootstrap/forms.html
+++ b/bootstrap/forms.html
@@ -13,8 +13,8 @@
                 </div>
                 <div class="panel-body">
                     <form action="" method="GET">
-                        <div class="form-group">
-                            <label for="fname">FirstName</label>
+                        <div class="form-group has-warning">
+                            <label for="fname" class="control-label">FirstName</label>
                             <input class="form-control" id="fname" name="fname"
                             placeholder="Enter First Name" required/>
                         </div>
